2014-03-20 Matt:
	* Updating README
	* Added runtime options for Analysis. Annoyed that I hadn't done it yet..

2014-03-19 Matt:
	* Adding TreeAnalyzer which can loop over simple trees made from G4 output
	* Adding plotting scripts to format first results
	* Tagging first version

2014-03-18 Matt:
	* Creating package in order to derive electric field from shower profiles.
	* Setting up structure
	* Skeleton of code added
	* First working version. Reproduced 100 GeV and 1TeV shower results.
	* Added Analytic calculation with some gaussian shower smearing